examples/kubernetes/14-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: teastore-logger
  namespace: teastore
  labels:
    app: teastore-logger
spec:
  selector:
    matchLabels:
      app: teastore-logger
  template:
    metadata:
      labels:
        app: teastore-logger
    spec:
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: logger
          image: fluent/fluent-bit:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          volumeMounts:
            - name: varlog
              mountPath: /var/log
            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
              readOnly: true
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
