examples/kubernetes/03-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teastore-db
  namespace: teastore
spec:
  replicas: 1
  selector:
    matchLabels:
      run: teastore-db
  template:
    metadata:
      labels:
        app: teastore
        run: teastore-db
    spec:
      containers:
        - name: teastore-db
          image: mennaelyamany/teastore-db:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: teastore-db
  namespace: teastore
  labels:
    app: teastore
    run: teastore-db
spec:
  ports:
    - port: 3306
      protocol: TCP
  selector:
    run: teastore-db
