examples/kubernetes/06-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teastore-auth
  namespace: teastore
spec:
  replicas: 1
  selector:
    matchLabels:
      run: teastore-auth
  template:
    metadata:
      labels:
        app: teastore
        run: teastore-auth
    spec:
      containers:
        - name: teastore-auth
          image: mennaelyamany/teastore-auth:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: teastore-auth
  namespace: teastore
  labels:
    app: teastore
    run: teastore-auth
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    run: teastore-auth
