examples/kubernetes/08-recommender.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teastore-recommender
  namespace: teastore
spec:
  replicas: 1
  selector:
    matchLabels:
      run: teastore-recommender
  template:
    metadata:
      labels:
        app: teastore
        run: teastore-recommender
    spec:
      containers:
        - name: teastore-recommender
          image: mennaelyamany/teastore-recommender:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "2Gi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: teastore-recommender
  namespace: teastore
  labels:
    app: teastore
    run: teastore-recommender
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    run: teastore-recommender
