examples/kubernetes/09-webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teastore-webui
  namespace: teastore
spec:
  replicas: 1
  selector:
    matchLabels:
      run: teastore-webui
  template:
    metadata:
      labels:
        app: teastore
        run: teastore-webui
    spec:
      containers:
        - name: teastore-webui
          image: descartesresearch/teastore-webui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "2Gi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: teastore-webui
  namespace: teastore
  labels:
    app: teastore
    run: teastore-webui
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30080
      protocol: TCP
  selector:
    run: teastore-webui
