examples/kubernetes/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teastore-ingress
  namespace: teastore
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: teastore.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teastore-webui
                port:
                  number: 8080
